welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:35: error: not found: value fonctonTest
  if (fonctonTest()==false){
      ^